--- a/sst.html
+++ b/sst.html
@@ -3,143 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madhubani Painting</title>
+    <title>Ancient Travel to India</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f1f1f1;
-        }
-        header {
-            background-color: #5e2a84;
-            color: white;
-            text-align: center;
-            padding: 40px 20px;
-            font-size: 36px;
-            font-weight: bold;
-        }
-        h1, h2 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f7f7f7;
             color: #333;
         }
+        header {
+            background: #2E3B4E;
+            color: white;
+            text-align: center;
+            padding: 30px 10px;
+        }
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
         section {
-            padding: 40px;
-        }
-        .content {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
+            padding: 20px;
             margin: 20px auto;
-            max-width: 1100px;
+            background-color: white;
+            max-width: 900px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .content h2 {
-            margin-top: 0;
-            font-size: 28px;
-            color: #5e2a84;
-        }
-        .content p {
-            font-size: 18px;
-            line-height: 1.6;
+        h2 {
+            color: #2E3B4E;
+            border-bottom: 2px solid #2E3B4E;
+            padding-bottom: 10px;
             margin-bottom: 20px;
+            font-size: 1.8rem;
+        }
+        h3 {
+            color: #3C6072;
+            font-size: 1.4rem;
         }
         ul {
             list-style-type: none;
-            padding-left: 20px;
+            padding-left: 0;
         }
-        ul li {
-background: url('https://img.icons8.com/ios-filled/50/000000/square-full.png') no-repeat left center;
-            padding-left: 30px;
-            font-size: 18px;
-            margin-bottom: 12px;
+        li {
+            font-size: 1rem;
+            line-height: 1.6;
+            margin-bottom: 15px;
+        }
+        .subsection {
+            margin-top: 20px;
+        }
+        .subsection ul li::before {
+            content: "• ";
+            color: #2E3B4E;
+            font-weight: bold;
+            margin-right: 10px;
         }
         footer {
-            background-color: #5e2a84;
+            background-color: #2E3B4E;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px;
             position: fixed;
             width: 100%;
             bottom: 0;
         }
-        .btn {
-            display: inline-block;
-            background-color: #5e2a84;
-            color: white;
-            padding: 12px 30px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 16px;
-            transition: background-color 0.3s;
-            margin-top: 20px;
-        }
-        .btn:hover {
-            background-color: #4b1d65;
-        }
-        .image-section {
-            text-align: center;
-            margin: 40px 0;
-        }
-        .image-section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+            section {
+                padding: 15px;
+                margin: 15px;
+            }
         }
     </style>
 </head>
 <body>
  
-<header>
-    Madhubani Painting
-</header>
+    <header>
+        <h1>Why People Traveled to India in Ancient Times</h1>
+    </header>
  
-<section class="content">
-    <h2>1. History and Origin</h2>
-    <p>Madhubani painting, also known as Mithila painting, is a traditional Indian art form from the Mithila region, which includes parts of Bihar, Jharkhand, and Nepal. It is believed to have been practiced for over 2,500 years. The art is thought to have originated during the time of the Ramayana, and is closely associated with Hindu mythology. King Janaka, father of Sita, is believed to have commissioned these paintings for Sita's wedding.</p>
+    <section>
+        <h2>1. Motivations Behind Travel to India</h2>
  
-    <h2>2. Characteristics of Madhubani Art</h2>
-    <ul>
-        <li><strong>Themes:</strong> Common themes include nature (trees, flowers, animals, birds), mythological and religious subjects (gods and goddesses), and social themes (weddings, daily life, fertility symbols).</li>
-        <li><strong>Distinctive Features:</strong> Madhubani art is known for intricate line work, vibrant colors, and geometric patterns. The paintings often feature bold lines and bright colors like red, black, and yellow, with details in green, blue, and other shades.</li>
-    </ul>
+        <div class="subsection">
+            <h3>a. Trade</h3>
+            <ul>
+                <li><strong>Spices and Goods:</strong> India was renowned for its rich natural resources, including spices (pepper, cinnamon, cardamom), silk, cotton, and precious stones (diamonds, rubies), all of which were highly coveted in regions like the Roman Empire, Greece, and the Middle East.</li>
+                <li><strong>The Spice Trade:</strong> Spices were essential for cooking, preservation, and even medicinal uses. Traders from the Mediterranean, Southeast Asia, and Arabia traveled to India to obtain these spices.</li>
+                <li><strong>The Silk Road:</strong> India played a central role in the Silk Road, connecting China, Central Asia, and Europe. It was a key stop for traders exchanging goods like silk and jade from China for India’s valuable products.</li>
+            </ul>
+        </div>
  
-    <h2>3. Techniques and Tools</h2>
-    <p>Traditional Madhubani artists use tools like twigs, fingers, and brushes to create the detailed patterns. The art is usually painted on surfaces such as walls, cloth, paper, and canvas. Artists make their own brushes for finer details and use natural pigments for colors.</p>
+        <div class="subsection">
+            <h3>b. Cultural Exchange</h3>
+            <ul>
+                <li><strong>Art and Architecture:</strong> India's rich cultural heritage, including classical dance, music, and sculpture, influenced distant civilizations. India's temples, palaces, and sculptures were admired and emulated.</li>
+                <li><strong>Philosophy and Literature:</strong> Indian works like the Vedas, Upanishads, Mahabharata, and Ramayana attracted scholars worldwide, influencing intellectual movements in places like Greece, Rome, and Southeast Asia.</li>
+                <li><strong>Influence of Buddhism:</strong> Buddhism, originating in India, spread throughout Asia. Monks and scholars traveled to India to study Buddhist teachings and visit sacred sites like Bodh Gaya.</li>
+            </ul>
+        </div>
  
-    <h2>4. Types of Madhubani Painting</h2>
-    <ul>
-        <li><strong>Bharni:</strong> Heavy use of colors with minimal line work, often depicting gods and goddesses.</li>
-        <li><strong>Kachni:</strong> Focuses on intricate line work with minimal color, creating delicate designs.</li>
-        <li><strong>Tantrik:</strong> Depicts mystical and spiritual themes, often with bright, bold colors.</li>
-        <li><strong>Godna:</strong> Features tattoo-like patterns and often depicts human figures and animals.</li>
-    </ul>
+        <div class="subsection">
+            <h3>c. Religion</h3>
+            <ul>
+                <li><strong>Hinduism and Pilgrimages:</strong> As the birthplace of Hinduism, India attracted pilgrims from Southeast Asia, the Middle East, and Central Asia to visit sacred temples and perform religious rites.</li>
+                <li><strong>Buddhism and Monastic Education:</strong> Indian centers of Buddhist learning, such as Nalanda and Takshashila, attracted monks from China, Korea, and Southeast Asia for training and spiritual enlightenment.</li>
+                <li><strong>Jainism:</strong> Jainism, another major religion originating in India, also attracted followers from neighboring regions, with temples in Gujarat and Rajasthan serving as pilgrimage sites.</li>
+            </ul>
+        </div>
  
-    <h2>5. Modern Evolution</h2>
-    <p>Madhubani paintings gained recognition in the 20th century, expanding beyond traditional wall decorations to be created on paper, cloth, and canvas. This increased the art's accessibility globally, and it is now seen as an important cultural tradition. Artists also began using the art form on textiles like sarees and accessories.</p>
+        <div class="subsection">
+            <h3>d. Learning and Knowledge</h3>
+            <ul>
+                <li><strong>Centers of Learning:</strong> India had renowned centers like Nalanda University and Takshashila, where scholars from Greece, Persia, and China traveled to study mathematics, astronomy, medicine, and philosophy.</li>
+                <li><strong>Mathematics and Astronomy:</strong> Indian scholars contributed significantly to mathematics, notably the concept of zero, the decimal system, and advancements in astronomy. These intellectual achievements had a lasting influence on global knowledge.</li>
+                <li><strong>Ayurveda:</strong> The ancient Indian system of medicine, Ayurveda, attracted scholars and medical practitioners from the Middle East, China, and Southeast Asia to learn about herbal medicine, surgery, and holistic healing.</li>
+            </ul>
+        </div>
  
-    <h2>6. Notable Artists</h2>
-    <ul>
-        <li><strong>Jagdamba Devi:</strong> One of the first women to gain recognition for her Madhubani art.</li>
-        <li><strong>Bharti Dayal:</strong> Known for her intricate and vivid depictions of nature and mythology.</li>
-        <li><strong>Sita Devi:</strong> Famous for her vibrant use of color and depiction of Hindu deities.</li>
-    </ul>
+        <div class="subsection">
+            <h3>e. Royal Diplomacy and Alliances</h3>
+            <ul>
+                <li><strong>Political Alliances:</strong> India’s wealth and strategic location made it a key partner in political alliances. Rulers and ambassadors from Persia, Greece, and China visited India for diplomacy and trade agreements.</li>
+                <li><strong>The Maurya and Gupta Empires:</strong> Emperor Ashoka’s diplomacy spread Buddhism throughout Asia, leading to exchanges with countries like Sri Lanka, Central Asia, and Southeast Asia. These diplomatic efforts attracted foreign dignitaries to India.</li>
+            </ul>
+        </div>
+    </section>
  
-    <h2>7. Recognition and Awards</h2>
-    <p>In 2003, Madhubani painting was granted a Geographical Indication (GI) tag, which ensures the authenticity of the artwork. Many artists have received national and international awards for their contributions to this folk art tradition.</p>
+    <section>
+        <h2>2. Geography: Routes and Features of India</h2>
  
-    <h2>8. Cultural Significance</h2>
-    <p>Madhubani paintings are deeply intertwined with the cultural and religious traditions of the Mithila region. They were traditionally used to decorate homes during weddings and festivals to bring good luck and prosperity. The art form serves as a way for rural women to express their emotions, dreams, and daily life through visual storytelling.</p>
+        <div class="subsection">
+            <h3>a. Land Routes</h3>
+            <ul>
+                <li><strong>The Silk Road:</strong> The Silk Road connected China, Central Asia, and India, facilitating the movement of goods, people, and ideas. Key trade routes passed through regions like Persia and Central Asia into India.</li>
+                <li><strong>The Khyber Pass:</strong> A key land route into India, the Khyber Pass, located between present-day Pakistan and Afghanistan, allowed traders and travelers to enter India from Central Asia.</li>
+                <li><strong>Overland Routes through Persia:</strong> Traders from Persia traveled overland through the Iranian Plateau to reach India, carrying goods and facilitating cultural exchanges.</li>
+            </ul>
+        </div>
  
-    <div class="image-section">
-https://en.wikipedia.org/wiki/Madhubani_painting" class="btn" target="_blank">Learn More</a>
-</section>
+        <div class="subsection">
+            <h3>b. Sea Routes</h3>
+            <ul>
+                <li><strong>Maritime Trade Routes:</strong> India’s access to major seas like the Arabian Sea, Bay of Bengal, and the Indian Ocean made it a central hub for maritime trade. Sailors from Arabia, Africa, and Southeast Asia sailed to India for trade.</li>
+                <li><strong>Western Coast Ports:</strong> Ports like Alexandria, Barygaza, and Arikamedu were critical trade hubs connecting India to the Roman Empire and Africa.</li>
+                <li><strong>Eastern Coast Ports:</strong> The eastern coastline, including ports like Tamralipti and Kaveripattinam, connected India to Southeast Asia and influenced the region's cultures.</li>
+            </ul>
+        </div>
  
-<footer>
-    <p>&copy; 2025 Madhubani Painting Art | All Rights Reserved</p>
-</footer>
+        <div class="subsection">
+            <h3>c. Favorable Geographical Features</h3>
+            <ul>
+                <li><strong>Strategic Location:</strong> India’s geographical position between the East and West made it a natural center for trade and cultural exchange.</li>
+                <li><strong>Natural Resources:</strong> India’s fertile river valleys and abundant natural resources attracted foreign travelers seeking goods and opportunities for trade.</li>
+                <li><strong>Monsoon Winds:</strong> The monsoon winds were instrumental in enabling sailors to navigate the seas to India, facilitating maritime trade and travel.</li>
+                <li><strong>Rivers and Waterways:</strong> India’s extensive river systems, like the Ganges and Indus, served as key trade routes, facilitating movement within India itself.</li>
+            </ul>
+        </div>
+    </section>
  
+    <footer>
+        <p>&copy; 2025 Ancient Travel Project | All Rights Reserved</p>
+    </footer>
 </body>
 </html>
