--- a/sst.html
+++ b/sst.html
@@ -82,7 +82,7 @@
 <body>
  
     <header>
-        <h1>Why People Traveled to India in Ancient Times</h1>
+        <h1>Why People Traveled to India in Ancient Times !</h1>
     </header>
  
     <section>
