--- a/hindi.html
+++ b/hindi.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>हिन्द महासागर में छोटा-सा हिन्दुस्तान</title>
+    
+    <title>हिन्द महासागर में छोटा-सा हिन्दुस्तान...</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
